--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
             "import": "./dist/index.js"
+        },
+        "./types": {
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/types/index.js",
+            "import": "./dist/types/index.js"
         }
     },
     "files": [
