--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         ".": {
             "types": "./dist/index.d.ts",
             "require": "./dist/index.cjs",
-            "import": "./dist/index.js"
+            "import": "./dist/index.js",
+            "default": "./dist/index.js"
         },
         "./types": {
             "types": "./dist/types/index.d.ts",
-            "require": "./dist/types/index.js",
-            "import": "./dist/types/index.js"
+            "require": "./dist/types/index.d.ts",
+            "import": "./dist/types/index.d.ts"
         }
     },
     "files": [
