--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.5",
     "packageManager": "yarn@3.6.4",
     "type": "module",
+    "main": "./dist/index.js",
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
