--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES6",
         "module": "commonjs",
-        "lib": ["es6", "dom", "es5"],
+        "target": "es2020",
+        "lib": ["dom", "es2020"],
         "declaration": true,
         "outDir": "./dist",
         "strict": true,
