--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
+        "target": "ES6",
         "module": "commonjs",
-        "target": "es2020",
-        "lib": ["dom", "es2020"],
+        "lib": ["es6", "dom", "es5"],
         "declaration": true,
         "outDir": "./dist",
         "strict": true,
@@ -11,5 +11,5 @@
             "bungie-marathon-api/types": ["types/index"]
         }
     },
-    "include": ["src/**/*.ts", "global.d.ts"]
+    "include": ["src/**/*.ts"]
 }
